--- a/libft/Makefile
+++ b/libft/Makefile
@@ -10,27 +10,27 @@ LDFLAGS=-L.
 
 LDLIBS=-lft
 
-HDDIRS=-I includes/
+HDDIRS= -I /.
 
-SRC= ft_power.c ft_strjoin.c ft_abs.c ft_putchar.c \
-ft_strlcat.c ft_atoi.c ft_putchar_fd.c \
-ft_strlen.c ft_bzero.c ft_putendl.c ft_strmap.c \
-ft_isalnum.c ft_putendl_fd.c ft_strmapi.c \
-ft_isalpha.c ft_putnbr.c ft_strncat.c ft_isascii.c \
-ft_putnbr_fd.c ft_strncmp.c ft_isdigit.c \
-ft_putstr.c ft_strncpy.c ft_isprint.c ft_str_isdigit.c \
-ft_strnequ.c ft_itoa.c ft_str_isint.c \
-ft_strnew.c ft_memalloc.c ft_strcat.c ft_strnstr.c \
-ft_memccpy.c ft_strchr.c ft_strrchr.c ft_memchr.c \
-ft_strclr.c ft_strsplit.c ft_memcmp.c ft_strcmp.c \
-ft_strstr.c ft_memcpy.c ft_strcpy.c ft_strsub.c \
-ft_memdel.c ft_strdel.c ft_strtrim.c ft_memmove.c \
-ft_strdup.c ft_tolower.c ft_memset.c ft_strequ.c \
-ft_toupper.c ft_min.c ft_striter.c ft_nbrlen.c ft_striteri.c
+SRC= ft_memccpy.c ft_str_isdigit.c ft_strncat.c ft_abs.c ft_memchr.c \
+ft_str_isint.c ft_strncmp.c ft_atoi.c ft_memcmp.c ft_strcat.c ft_strncpy.c \
+ft_bzero.c ft_memcpy.c ft_strchr.c ft_strnequ.c ft_isalnum.c ft_memdel.c \
+ft_strclr.c ft_strnew.c ft_isalpha.c ft_memmove.c ft_strnstr.c \
+ft_isascii.c ft_memset.c ft_strcpy.c ft_strrchr.c \
+ft_isdigit.c ft_min.c ft_strdel.c ft_strsplit.c \
+ft_isprint.c ft_nbrlen.c ft_strdup.c ft_strstr.c \
+ft_itoa.c ft_power.c ft_strequ.c ft_strsub.c \
+ft_lstadd.c ft_putchar.c ft_striter.c ft_strtrim.c \
+ft_lstdel.c ft_putchar_fd.c ft_striteri.c ft_tolower.c \
+ft_lstdelone.c ft_putendl.c ft_strjoin.c ft_toupper.c \
+ft_lstiter.c ft_putendl_fd.c ft_strlcat.c \
+ft_lstmap.c ft_putnbr.c ft_strlen.c \
+ft_lstnew.c ft_putnbr_fd.c ft_strmap.c \
+ft_memalloc.c ft_putstr.c ft_strmapi.c ft_putstr_fd.c ft_strcmp.c
 
 OBJ=$(SRC:.c=.o)
 
-$(NAME): includes/libft.h
+$(NAME): libft.h
 	$(CC) $(CFLAGS) -c $(SRC) $(HDDIRS)
 	ar rc $(NAME) $(OBJ)
 	ranlib $(NAME)
